app/assets/stylesheets/ui/thumbs/stacks.css
.stack {
  background: none !important;
  position: relative;
  
  --stack-item-background: #000;
  --stack-item-transform: translate(5%, 5%);
  --stack-item-outline: rgba(0,0,255,0.1);
}
.stack .stack-item {
  display: block;
  position: absolute;
  background: var(--stack-item-background) center/contain no-repeat;
  width: 95%;
  height: 95%;
}
.stack .stack-item .stack-item {
  transform: var(--stack-item-transform);
  -ms-transform: var(--stack-item-transform);
  -webkit-transform: var(--stack-item-transform);
  -o-transform: var(--stack-item-transform);
  -moz-transform: var(--stack-item-transform);
  width: 100%;
  height: 100%;
}
.stack .stack-item {
  top: 0;
  left: 0;
}
.stack:hover .stack-item::before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  transition: outline 0.3s ease;
  outline: solid 3px var(--stack-item-outline);
}

.post .stack {
	margin-right: 10px;
}

